src/objects/Daily_Invoice__c.object
<CustomObject>
    <description>The consolidated daily invoice for Full Prepaid Corporate Customers</description>
    <fields>
        <fullName>ARMS_Invoice_ID__c</fullName>
        <description>ARMS Invoice Number e.g. 027xxxxxx</description>
        <label>ARMS Invoice ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <description>The consolidated balance amount</description>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <description>The Billing Account where this Daily Invoice is for</description>
        <label>Billing Account</label>
        <referenceTo>Zuora__CustomerAccount__c</referenceTo>
        <relationshipLabel>Daily Invoices (FPP)</relationshipLabel>
        <relationshipName>Daily_Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <description>The Date this Daily Invoice is for</description>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_PDF_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator if the Invoice PDF is already generated</description>
        <label>Is PDF Generated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Amt__c</fullName>
        <description>The consolidated Payment Amount</description>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prev_Bal__c</fullName>
        <description>The opening balance of the day</description>
        <label>Previous Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Amt__c</fullName>
        <description>The consolidated Tax Amount</description>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Exempt_Amt__c</fullName>
        <description>The consolidated Tax Exempt Amount</description>
        <label>Tax Exempt Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>To_ARMS_Time__c</fullName>
        <description>Time when this record is sent to ARMS. Only valid for ARMS Billing Account</description>
        <label>ARMS Interface Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Amt__c</fullName>
        <description>The consolidated Total Amount</description>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Daily Invoice (FPP)</label>
    <nameField>
        <displayFormat>I-{00000000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Invoices (FPP)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>